fix: FAB hold jump + text select

--- a/src/components/shell/Shell.module.css
+++ b/src/components/shell/Shell.module.css
@@ -99,6 +99,7 @@
 .fabDragging {
   position: fixed;
   z-index: 30;
+  transform: none;
 }
 
 .icon {
